--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <title>Inicio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="MozWorkers/css/getstarted.css">
+    <link rel="stylesheet" href="View/css/getstarted.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   
@@ -35,8 +35,8 @@
       <h1>O Gerenciador mais eficaz para o teu negocio <br> <span> Moz</span><span class="workers">Companies</span> <span class="mann">Managment</span></h1>
       <div class="button">
           <a href="" class="btn1">Entrar como visitante</a>
-          <a href="MozWorkers/login.html" class="btn2">Iniciar a sessao</a>
-      </d iv>
+          <a href="View/login.jsp" class="btn2">Iniciar a sessao</a>
+      </div>
   </section>
   
 </div>
